PATCH: bugfix to make retrievable orders visible without logging in.

--- a/themes/ssu/css/ModulesByTopic.css
+++ b/themes/ssu/css/ModulesByTopic.css
@@ -54,6 +54,9 @@ h3 {
 .topic.opened h3 a{
     color: #FF336D;
 }
+a.change {
+    border-bottom: none;
+}
 .topic.opened li, .topic.opened li a {
     color: #525050!important;
 }
@@ -152,6 +155,6 @@ footer a {
 }
 
 
-@media only screen and (max-width: 700px)  {
+@media only screen and (max-width: 990px)  {
     li {list-style: none;}
 }
